Add basic category API
